--- a/P003228.opf/meta.yml
+++ b/P003228.opf/meta.yml
@@ -4,4 +4,9 @@ source_metadata:
   id: bdr:W00KG03151
   title: བྲག་གཡབ་ཆེ་བཟང་བློ་བཟང་རྣམ་རྒྱལ་གྱི་རྣམ་ཐར
   author: ''
-  volumes: {}
+  volumes:
+    33a8808855e24a26a9fda44c0adcbd2d:
+      image_group_id: I00KG03153
+      title: ''
+      volume_number: 1
+      total_pages: 290
