--- a/P003228.opf/layers/v001/Pagination.yml
+++ b/P003228.opf/layers/v001/Pagination.yml
@@ -1,5 +1,5 @@
 id: 244f01dbf8004284af56ff840a71d6dd
-annotation_type: pagination
+annotation_type: Pagination
 revision: '00001'
 annotations:
   288f6df855ad4b1692632116a90cddc3:
