--- a/P003228.opf/meta.yml
+++ b/P003228.opf/meta.yml
@@ -1,5 +1,7 @@
 id: P003228
 initial_creation_type: ocr
+created_at: 29/03/2020
+last_modified_at: 24/11/2021
 source_metadata:
   id: bdr:W00KG03151
   title: བྲག་གཡབ་ཆེ་བཟང་བློ་བཟང་རྣམ་རྒྱལ་གྱི་རྣམ་ཐར
