--- a/P003228.opf/meta.yml
+++ b/P003228.opf/meta.yml
@@ -1,7 +1,7 @@
 id: P003228
 initial_creation_type: ocr
 created_at: 29/03/2020
-last_modified_at: 24/11/2021
+last_modified_at: 2021-12-17 10:48:52.348731
 source_metadata:
   id: bdr:W00KG03151
   title: བྲག་གཡབ་ཆེ་བཟང་བློ་བཟང་རྣམ་རྒྱལ་གྱི་རྣམ་ཐར
@@ -13,3 +13,5 @@ source_metadata:
       volume_number: 1
       total_pages: 290
       base_file: v001.txt
+  access: http://purl.bdrc.io/admindata/AccessOpen
+  restrictedInChina: true
